Updates WelcomeScreens Storyboard

--- a/Storyboards/WelcomeScreens.storyboard
+++ b/Storyboards/WelcomeScreens.storyboard
@@ -19,7 +19,7 @@
         <!--Welcome Screen One-->
         <scene sceneID="dmt-QW-fGx">
             <objects>
-                <viewController title="Welcome Screen One" id="eV9-Bi-OdC" sceneMemberID="viewController">
+                <viewController title="Welcome Screen One" id="eV9-Bi-OdC" customClass="WelcomeScreenOne" customModule="Organix" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4gC-Ic-gK5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -40,7 +40,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.22352941179999999" green="0.46666666670000001" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="fjP-RX-NkB" firstAttribute="top" secondItem="Dar-PK-mYy" secondAttribute="top" constant="180" id="9cu-E0-Id3"/>
                             <constraint firstItem="sl1-Ur-IBz" firstAttribute="top" secondItem="fjP-RX-NkB" secondAttribute="bottom" constant="23" id="X0A-cz-lki"/>
@@ -58,10 +58,10 @@
             </objects>
             <point key="canvasLocation" x="450" y="157"/>
         </scene>
-        <!--View Controller-->
+        <!--Welcome Screen Two-->
         <scene sceneID="0oX-8d-Ayt">
             <objects>
-                <viewController id="hKH-kg-KTi" sceneMemberID="viewController">
+                <viewController id="hKH-kg-KTi" customClass="WelcomeScreenTwo" customModule="Organix" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Qu-yl-Ipk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,7 +95,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SV4-Ud-YRh">
-                                <rect key="frame" x="87" y="362" width="200" height="46"/>
+                                <rect key="frame" x="88" y="362" width="199" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="q6q-Iu-UUW"/>
                                 </constraints>
@@ -110,6 +110,9 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <action selector="letsGetStartedButtonTapped:" destination="hKH-kg-KTi" eventType="touchUpInside" id="ioK-rc-lfJ"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DlF-sG-6sa">
                                 <rect key="frame" x="64" y="166" width="247" height="171"/>
@@ -213,6 +216,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B8O-Jr-MeX">
                                 <rect key="frame" x="216" y="289" width="108" height="88"/>
+                                <color key="backgroundColor" red="0.30196078430000001" green="0.58823529409999997" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="108" id="NGL-dc-E9v"/>
                                     <constraint firstAttribute="height" constant="88" id="bSm-Xl-QSA"/>
@@ -255,7 +259,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.22352941179999999" green="0.46666666670000001" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="B8O-Jr-MeX" firstAttribute="leading" secondItem="CK4-mB-VWV" secondAttribute="trailing" constant="58" id="6ra-QE-jni"/>
                             <constraint firstItem="CK4-mB-VWV" firstAttribute="top" secondItem="xcx-Jb-Cpp" secondAttribute="bottom" constant="111" id="As6-ak-7gG"/>
@@ -296,7 +300,7 @@
                                 <rect key="frame" x="126.5" y="128" width="122.5" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kmP-aH-Vns">
-                                        <rect key="frame" x="0.0" y="0.0" width="122.5" height="31"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="122.5" height="30.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="31" id="7qh-RR-NOb"/>
                                         </constraints>
@@ -311,7 +315,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="93e-5u-1a6">
-                                        <rect key="frame" x="0.0" y="31" width="122.5" height="19"/>
+                                        <rect key="frame" x="0.0" y="30.5" width="122.5" height="19.5"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Select one">
                                                 <attributes>
@@ -325,7 +329,8 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e6C-Y3-XVm">
-                                <rect key="frame" x="50" y="289" width="108" height="88"/>
+                                <rect key="frame" x="50" y="289.5" width="108" height="88"/>
+                                <color key="backgroundColor" red="0.30196078430000001" green="0.58823529409999997" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
                                         <fragment content="My Location">
@@ -337,9 +342,13 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <action selector="didSelectMyLocationButton:" destination="TLH-XU-GLh" eventType="touchUpInside" id="55N-Iq-tpX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Env-Qf-TVf">
-                                <rect key="frame" x="216" y="289" width="108" height="88"/>
+                                <rect key="frame" x="216" y="289.5" width="108" height="88"/>
+                                <color key="backgroundColor" red="0.30196078430000001" green="0.58823529409999997" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="108" id="IG2-OQ-tY6"/>
                                     <constraint firstAttribute="height" constant="88" id="NlR-jK-zdf"/>
@@ -355,6 +364,9 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <action selector="didSelectZipCodeButton:" destination="TLH-XU-GLh" eventType="touchUpInside" id="Uya-YU-vKL"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zwI-tI-myI">
                                 <rect key="frame" x="265" y="599" width="80" height="48"/>
@@ -373,10 +385,36 @@
                                         </fragment>
                                     </attributedString>
                                 </state>
+                                <connections>
+                                    <action selector="didSelectNextButton:" destination="TLH-XU-GLh" eventType="touchUpInside" id="S2M-O0-oTp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GcW-JC-hjg">
+                                <rect key="frame" x="133" y="385" width="108" height="88"/>
+                                <color key="backgroundColor" red="0.30196078430000001" green="0.58823529409999997" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="108" id="JuL-BC-mtC"/>
+                                </constraints>
+                                <state key="normal">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="City">
+                                            <attributes>
+                                                <color key="NSColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <font key="NSFont" size="16" name="AvenirNext-Medium"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="didSelectCityButton:" destination="TLH-XU-GLh" eventType="touchUpInside" id="uz0-3e-7LD"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.51000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="USX-zi-xhV" firstAttribute="bottom" secondItem="GcW-JC-hjg" secondAttribute="bottom" constant="194" id="2jE-dG-mlB"/>
+                            <constraint firstItem="GcW-JC-hjg" firstAttribute="centerY" secondItem="USX-zi-xhV" secondAttribute="centerY" constant="63.5" id="3O0-UM-Cve"/>
                             <constraint firstItem="USX-zi-xhV" firstAttribute="bottom" secondItem="UbD-Ps-rme" secondAttribute="bottom" constant="489" id="6iV-Hu-oXJ"/>
                             <constraint firstItem="zwI-tI-myI" firstAttribute="leading" secondItem="USX-zi-xhV" secondAttribute="leading" constant="265" id="7Vs-9W-FQ3"/>
                             <constraint firstItem="Env-Qf-TVf" firstAttribute="centerY" secondItem="QKV-oF-q0h" secondAttribute="centerY" id="8G4-qo-DyZ"/>
@@ -389,15 +427,35 @@
                             <constraint firstItem="UbD-Ps-rme" firstAttribute="top" secondItem="USX-zi-xhV" secondAttribute="top" constant="64" id="kfo-PD-PvG"/>
                             <constraint firstItem="UbD-Ps-rme" firstAttribute="centerX" secondItem="QKV-oF-q0h" secondAttribute="centerX" id="vaW-bL-2QE"/>
                             <constraint firstAttribute="bottom" secondItem="zwI-tI-myI" secondAttribute="bottom" constant="20" symbolic="YES" id="wbf-O7-YBn"/>
+                            <constraint firstItem="USX-zi-xhV" firstAttribute="trailing" secondItem="GcW-JC-hjg" secondAttribute="trailing" constant="134" id="yNU-LL-XLg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="USX-zi-xhV"/>
                     </view>
                     <connections>
+                        <outlet property="cityButton" destination="GcW-JC-hjg" id="Y0U-yU-YF9"/>
                         <outlet property="myLocationButton" destination="e6C-Y3-XVm" id="igb-wi-fnD"/>
                         <outlet property="nextButton" destination="zwI-tI-myI" id="pm8-xg-5UT"/>
                         <outlet property="zipCodeButton" destination="Env-Qf-TVf" id="kx3-7R-3Fr"/>
                     </connections>
                 </viewController>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ipF-Dx-WPi">
+                    <rect key="frame" x="0.0" y="0.0" width="108" height="88"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="108" id="MnQ-0X-DUO"/>
+                        <constraint firstAttribute="height" constant="88" id="yi6-xg-Xo7"/>
+                    </constraints>
+                    <state key="normal">
+                        <attributedString key="attributedTitle">
+                            <fragment content="Zip Code">
+                                <attributes>
+                                    <color key="NSColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <font key="NSFont" size="16" name="AvenirNext-Medium"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                    </state>
+                </button>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1dh-ZJ-mYG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3052" y="156.97151424287858"/>
